2008-03-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Fix Python auto-indentation when line endings are set to CR/LF.


2008-03-23  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.common, doc/geany.txt, doc/geany.html,
   src/highlighting.c:
   Add styles to customize line and search marker and add
   translucency setting.
 * tagmanager/make.c, src/symbols.c:
   Update Makefile parser from CTags SVN and improve it to detect
   targets in Makefiles.
 * geany.glade, src/interface.c, src/prefs.c, src/prefs.h, src/keyfile.c
   src/callbacks.c, src/search.c, src/editor.c, src/editor.h,
   geany.glade:
   Add preference for not using the current word under the cursor when
   opening Find dialogs.
 * src/keybindings.c, src/keybindings.h, src/plugindata.h:
   Add shortcut to switch to the sidebar.
 * src/ui_utils.c:
   Small improvement in counting changed documents for Save All update.


2008-03-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/callbacks.c:
   When opening the manual on the website, include version string to
   ensure the appropriate manual version is shown.
 * src/prefix.h, src/main.c, src/Makefile.am, doc/Makefile.am:
   Use configure's --docdir option when installing and using the
   documentation.
 * data/snippets.conf:
   Add better "for" completion for Python.
 * tagmanager/tcl.c, src/symbols.c:
   Update TCL parser from CTags SVN which adds new symbol types for
   classes and methods (closes #1918748).
 * data/snippets.conf:
   Add missing colon to "for" snippet for Python and set cursor position
   (thanks mamaar on IRC).
 * src/win32.c:
   Fix crash on Windows due to missing error message when a process
   spawning fails.
 * src/treeviews.c:
   Allow selecting items in the symbol list by pressing Enter or Space.


2008-03-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/notebook.c:
   When closing tabs that were opened left-to-right, don't temporarily