@@ -40,7 +40,7 @@ static const gint api_version = 50;
 /* The ABI version should be incremented whenever existing fields in the plugin
  * data types below have to be changed or reordered. It should stay the same if fields
  * are only appended, as this doesn't affect existing fields. */
-static const gint abi_version = 23;
+static const gint abi_version = 22;
 
 /** This performs runtime checks that try to ensure:
  * 1. Geany ABI data types are compatible with this plugin.
