@@ -2,6 +2,10 @@
 
  * src/editor.c:
    Fix Python auto-indentation when line endings are set to CR/LF.
+ * src/keybindings.h, src/plugindata.h:
+   Add note about allowing appending of keybindings to groups without
+   breaking the API.
+   Undo unnecessary ABI change.
 
 
 2008-03-23  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
